test/quantumOuterParams.slq
def func1[outer: B](inner: B) qfree: B {
	// `outer` is not captured
	return inner;
}

def func2[outer: B](inner: B) qfree: B {
	if outer {} // `outer` is captured
	return inner;
}

def main(){
	x:=H(0);
	func:=func2[x]; /// error
	return func(x);
}
